fix: menu width when collapsed

--- a/src/components/ToolMenu/index.less
+++ b/src/components/ToolMenu/index.less
@@ -43,6 +43,7 @@
 
   &.collapsed {
 
+    min-width: unset;
     width: 40px;
 
     >.ant-collapse .ant-collapse-item {
